src/test/ui/consts/const-eval/issue-52442.stderr
error[E0744]: `loop` is not allowed in a `const`
  --> $DIR/issue-52442.rs:2:14
   |
LL |     [();  { &loop { break } as *const _ as usize } ];
   |              ^^^^^^^^^^^^^^

error[E0658]: casting pointers to integers in constants is unstable
  --> $DIR/issue-52442.rs:2:13
   |
LL |     [();  { &loop { break } as *const _ as usize } ];
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51910
   = help: add `#![feature(const_raw_ptr_to_usize_cast)]` to the crate attributes to enable

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52442.rs:2:13
   |
LL |     [();  { &loop { break } as *const _ as usize } ];
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ "pointer-to-integer cast" needs an rfc before being allowed inside constants

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0080, E0658, E0744.
For more information about an error, try `rustc --explain E0080`.
